--- a/style.css
+++ b/style.css
@@ -77,6 +77,16 @@ ul {
     opacity: 0.9;
 }
 
+.dark {
+    color: #fff;
+
+}
+
+.dark .btn {
+    background: #f4f4f4;
+    color: #333;
+}
+
 /* showcase */
 
 .showcase {
@@ -142,6 +152,30 @@ ul {
     padding: 50px 0 0 30px;
 }
 
-.xbox p {
+.xbox p, .carbon p {
     margin: 10px 0 20px;
+}
+
+/* Carbon */
+
+.carbon {
+    width: 100%;
+    height: 350px;
+    background: url("./img/carbon.jpg") no-repeat center center/cover;
+}
+
+.carbon .content {
+    width: 55%;
+    padding: 100px 0 0 30px;
+}
+
+.follow {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 30px 0 30px;
+}
+
+.follow * {
+    margin-right: 10px;
 }
